--- a/app/views/static_pages/takedown.html.erb
+++ b/app/views/static_pages/takedown.html.erb
@@ -2,7 +2,7 @@
 <div>
 	<p>Notice to users: The UC San Diego Library makes every effort to ensure that it has appropriate rights to provide access to content through the Digital Collections Website. These materials are made available for educational and scholarly use.
 		<hr>
-	<p>If you are a rights holder and are concerned that you have found material on the UC San Diego Library’s Digital Collections Website without your permission and believe our inclusion of this material on the Digital Collections Website violates your rights (e.g. inclusion is not covered by the Fair Use or other exemption to a copyright holder’s rights), please contact [dlp@ucsd.edu] and include the following:
+	<p>If you are a rights holder and are concerned that you have found material on the UC San Diego Library’s Digital Collections Website without your permission and believe our inclusion of this material on the Digital Collections Website violates your rights (e.g. inclusion is not covered by the Fair Use or other exemption to a copyright holder’s rights), please contact [<a href="mailto:dlp@ucsd.edu">dlp@ucsd.edu</a>] and include the following:
 		<ul>
 			<li>Your contact information (including email address and phone),</li>
 			<li>Exact URL where you found the material,</li>
