--- a/app/views/static_pages/search_tips.html.erb
+++ b/app/views/static_pages/search_tips.html.erb
@@ -8,7 +8,7 @@
 		<li>Use "OR", "AND", and "NOT" to create complex boolean logic, e.g. camp NOT matthews.</li>
 		<li>Use parentheses in complex expressions.</li>
 		<li>Searching is not case sensitive. For example, searching for 'dancers solomon islands' or 'DANCERS SOLOMON ISLANDS' will yield the same results.</li>
-		<li>Very common words (a, and, the, do, of, etc.) are ignored.</li>
+		<li>Very common words (a, and, the, do, of, etc.) are ignored in a search.</li>
 	</ul>
 	<br>
 	<p>The Advanced Search option is available on the search results page. Advanced Search allows you to search within specific fields such as title or name/creator, or limit the search to a specific collection or format type.
